# helix_projects

./: .gitignore  README.md  ctmptms25_code_cells.txt
.claude/: README.md
.claude/commands/: da-biz-ba.md  da-ch.md  da-data.md  da-discovery.md  da-ops-release.md  da-ops-review.md  da-ops.md  da-pm.md  da-projects.md  da-retro.md  da-ship.md  da-storytelling-data.md  da-sync.md  da-trace.md  da-triage.md
assessments/da/: README.md
da/: README.md  pyproject.toml
da/da/: __init__.py  ch.py  cli.py  config.py  macros.py  reconcile.py  report.py
da/da.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
knowledge-base/: README.md
knowledge-base/tms/: README.md
knowledge-base/wms/: README.md
mondelez/: .env.example  Edit UX_UI_MDLZ.xlsx  README.md  da.toml  go-live-tracker.md  requirements.txt
mondelez/00-platform/: README.md  deployment.md  environments.md  frontend-structure.md  runbook.md
mondelez/01-sections/: README.md
mondelez/02-data/: README.md  glossary.md
mondelez/03-build/: README.md  da-py-html-redesign-proposal.md  da-python-platform-plan.md
mondelez/04-requirements/: README.md  decisions.md  rollout-plan.md  tobe.md  uat-checklist.md
mondelez/05-reference/: tobe-v3.txt
mondelez/glossary/: 01-widgets.md  02-kpis.md  (+6 more)
panasonic/: .env.example  README.md
po/: 2026-05-27-danh-gia-tong-the-nen-tang-bi-workshop.md  Smartlog-BI-Assessment-2026-05-26.docx
saintgobain/: README.md  dashboard.html
scripts/: generate-da-commands.ps1  sync-da-skills.ps1
trace/: vfr-2026-05-19.md  widget-otif-chart-reorder-and-category-2026-05-12.md
(+525 files in other folders)
